# large-language-models

./: README.md  git_push.bat  pyproject.toml
sample_data/: corpus.txt  test_corp.txt
sample_data/v1/: corpus.txt
src/: GPT_wMoE_colab.ipynb
src/MimiKoKo-M1/: MLA_wMoE_colab.ipynb
src/models/: README.md
src/models/MimiKoKo-M1/: MimiKoKo_M1.0_colab.ipynb  MimiKoKo_M1.1_colab.ipynb  MimiKoKo_M1.2_colab.ipynb
src/models/MixGPT/: GPT_wMoE_colab.ipynb
src/tokenizer/: tokenizer.py
